--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@
 
 .item{
     border: darkred;
+display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    text-align: center;
 }
 
 p{
